--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-// ====== 1. استدعاء المكتبات المطلوبة ======const admin = require('firebase-admin');const express = require('express');const TelegramBot = require('node-telegram-bot-api');const cors = require('cors');// ====== 2. إعداد Firebase (يتم تهيئتها داخل دالة async) ======const serviceAccount = {type: "service_account",project_id: process.env.FIREBASE_PROJECT_ID,private_key_id: process.env.FIREBASE_PRIVATE_KEY_ID,private_key: process.env.FIREBASE_PRIVATE_KEY ? process.env.FIREBASE_PRIVATE_KEY.replace(/\n/g, '\n') : undefined,client_email: process.env.FIREBASE_CLIENT_EMAIL,client_id: process.env.FIREBASE_CLIENT_ID,auth_uri: "https://accounts.google.com/o/oauth2/auth",token_uri: "https://oauth2.googleapis.com/token",auth_provider_x509_cert_url: process.env.FIREBASE_CLIENT_CERT_URL,client_x509_cert_url: process.env.FIREBASE_CLIENT_CERT_URL,universe_domain: "googleapis.com"};let db;// دالة رئيسية async للبدء والتشغيل (تحل مشكلة 'await is only valid...')async function initializeAndStartServer() {try {// تهيئة Firebaseadmin.initializeApp({credential: admin.credential.cert(serviceAccount)});console.log("Firebase connected ✅");db = admin.firestore();} catch (error) {
+// ====== 1. استدعاء المكتبات المطلوبة ======
+const admin = require('firebase-admin');const express = require('express');const TelegramBot = require('node-telegram-bot-api');const cors = require('cors');// ====== 2. إعداد Firebase (يتم تهيئتها داخل دالة async) ======const serviceAccount = {type: "service_account",project_id: process.env.FIREBASE_PROJECT_ID,private_key_id: process.env.FIREBASE_PRIVATE_KEY_ID,private_key: process.env.FIREBASE_PRIVATE_KEY ? process.env.FIREBASE_PRIVATE_KEY.replace(/\n/g, '\n') : undefined,client_email: process.env.FIREBASE_CLIENT_EMAIL,client_id: process.env.FIREBASE_CLIENT_ID,auth_uri: "https://accounts.google.com/o/oauth2/auth",token_uri: "https://oauth2.googleapis.com/token",auth_provider_x509_cert_url: process.env.FIREBASE_CLIENT_CERT_URL,client_x509_cert_url: process.env.FIREBASE_CLIENT_CERT_URL,universe_domain: "googleapis.com"};let db;// دالة رئيسية async للبدء والتشغيل (تحل مشكلة 'await is only valid...')async function initializeAndStartServer() {try {// تهيئة Firebaseadmin.initializeApp({credential: admin.credential.cert(serviceAccount)});console.log("Firebase connected ✅");db = admin.firestore();} catch (error) {
     console.error("FIREBASE ERROR: Failed to initialize Firebase:", error.message);
     process.exit(1);
 }
 
-// ====== 3. إعداد Express و تشغيل الخادم ======
+// ====== 3. إعداد 
+Express و تشغيل الخادم ======
 const app = express();
 const PORT = process.env.PORT || 10000;
 const token = process.env.TELEGRAM_BOT_TOKEN;
@@ -19,7 +21,8 @@ app.get('/', (req, res) => {
 });
 
 
-// ====== 4. إعداد Telegram Bot و Webhook ======
+// ====== 4. إعداد 
+Telegram Bot و Webhook ======
 const bot = new TelegramBot(token, { polling: false });
 
 if (!token) {
@@ -123,4 +126,6 @@ bot.on('message', async (msg) => {
 app.listen(PORT, () => {
     console.log(`Server running on port ${PORT}`); 
 });
-}// تشغيل وظيفة الإعداد والبدءinitializeAndStartServer();
+}
+// تشغيل وظيفة الإعداد والبدء
+initializeAndStartServer();
