--- a/index.html
+++ b/index.html
@@ -3,75 +3,89 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>خدمة البحث عن الأدوية</title>
+<title>تجربة البحث عن الأدوية</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-.loader {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #4f46e5;
-  border-radius: 50%;
-  width: 18px;
-  height: 18px;
-  animation: spin 1s linear infinite;
-}
-@keyframes spin {0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); }}
+body {font-family: 'Inter', sans-serif;}
+.loader {border: 4px solid #f3f3f3; border-top: 4px solid #4f46e5; border-radius: 50%; width: 18px; height: 18px; animation: spin 1s linear infinite;}
+@keyframes spin {0% {transform: rotate(0deg);} 100% {transform: rotate(360deg);}}
 </style>
 </head>
-<body class="bg-gray-50 flex items-center justify-center min-h-screen">
+<body class="bg-gray-50 min-h-screen flex items-center justify-center p-4">
+<div class="w-full max-w-md bg-white p-8 rounded-xl shadow-2xl space-y-6">
+<h1 class="text-3xl font-extrabold text-indigo-700 text-center border-b pb-4 mb-6">البحث عن دواء</h1>
 
-<div class="bg-white p-6 rounded-xl shadow-xl w-full max-w-md">
-  <h1 class="text-center text-2xl font-bold text-indigo-700 mb-4">البحث عن دواء</h1>
-  
-  <form id="searchForm" class="space-y-4">
-    <input type="text" id="medicineName" placeholder="اسم الدواء" class="w-full p-2 border rounded" required>
-    <input type="text" id="area" placeholder="المنطقة" class="w-full p-2 border rounded" required>
-    <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700">
-      <span id="btnText">إرسال</span>
-    </button>
-  </form>
-  
-  <div id="statusMessage" class="mt-4 text-center hidden"></div>
+<form id="searchForm" class="space-y-4">
+  <div>
+    <label for="medicineName">اسم الدواء:</label>
+    <input type="text" id="medicineName" name="medicineName" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg" placeholder="مثال: باراسيتامول">
+  </div>
+  <div>
+    <label for="area">المنطقة:</label>
+    <input type="text" id="area" name="area" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg" placeholder="مثال: الخرطوم">
+  </div>
+  <button type="submit" id="submitButton" class="w-full py-3 px-4 bg-indigo-600 text-white rounded-lg">إرسال طلب البحث</button>
+</form>
+
+<div id="statusMessage" class="text-center p-3 rounded-lg font-medium hidden"></div>
+<div id="results" class="mt-4 space-y-2"></div>
 </div>
 
 <script>
-const RENDER_API_URL = '/search-medicine'; // نسبي → يشتغل على localhost أو أي سيرفر
-
+const RENDER_API_URL = 'http://localhost:10000/search-medicine';
 const form = document.getElementById('searchForm');
 const statusMessage = document.getElementById('statusMessage');
-const btnText = document.getElementById('btnText');
+const submitButton = document.getElementById('submitButton');
+const results = document.getElementById('results');
 
-form.addEventListener('submit', async (e) => {
+const displayStatus = (msg, type='info')=>{
+  statusMessage.innerHTML = msg;
+  statusMessage.classList.remove('hidden','bg-red-100','text-red-800','bg-green-100','text-green-800','bg-blue-100','text-blue-800');
+  if(type==='success') statusMessage.classList.add('bg-green-100','text-green-800');
+  else if(type==='error') statusMessage.classList.add('bg-red-100','text-red-800');
+  else statusMessage.classList.add('bg-blue-100','text-blue-800');
+};
+
+form.addEventListener('submit', async (e)=>{
   e.preventDefault();
-  statusMessage.classList.remove('hidden');
-  statusMessage.textContent = 'جارٍ إرسال الطلب...';
-  btnText.innerHTML = '<div class="loader"></div>';
+  submitButton.disabled = true;
+  submitButton.innerHTML = '<div class="loader"></div> جاري الإرسال...';
 
   const medicineName = document.getElementById('medicineName').value.trim();
   const area = document.getElementById('area').value.trim();
 
-  try {
+  try{
+    displayStatus('جارٍ إرسال الطلب...', 'info');
     const response = await fetch(RENDER_API_URL, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
       body: JSON.stringify({ medicineName, area })
     });
-
     const result = await response.json();
-
     if(response.ok){
-      statusMessage.textContent = '✅ تم إرسال الطلب بنجاح.';
-      form.reset();
+      displayStatus('✅ تم إرسال الطلب للتجربة', 'success');
+      document.getElementById('medicineName').value = '';
+      document.getElementById('area').value = '';
     } else {
-      statusMessage.textContent = '❌ فشل في إرسال الطلب: ' + (result.message || '');
+      displayStatus('❌ فشل في الإرسال', 'error');
     }
-
   } catch(err){
-    statusMessage.textContent = '❌ خطأ في الاتصال بالخادم.';
-  } finally {
-    btnText.textContent = 'إرسال';
+    displayStatus('❌ خطأ في الشبكة', 'error');
+  } finally{
+    submitButton.disabled = false;
+    submitButton.textContent = 'إرسال طلب البحث';
   }
 });
-</script>
 
+// ===== WebSocket للتجربة =====
+const ws = new WebSocket('ws://localhost:8080');
+ws.onmessage = (event)=>{
+  const data = JSON.parse(event.data);
+  const div = document.createElement('div');
+  div.classList.add('p-2','border','rounded','bg-gray-100');
+  div.innerHTML = `✅ ${data.status} - ${data.pharmacy.name} <br> الموقع: ${data.pharmacy.location.details} <br> واتساب: ${data.pharmacy.whatsapp}`;
+  results.prepend(div);
+};
+</script>
 </body>
 </html>
